--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8383
-server.servlet.context-path=/api
+server.servlet.context-path=/api-huex/v1
 
  # credentials
 spring.datasource.url=jdbc:postgresql://ec2-52-54-212-232.compute-1.amazonaws.com:5432/dd9jv9h3hk23nq
