--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 # ignore 'user' reserved word
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+# spring.jackson.serialization.FAIL_ON_EMPTY_BEANS = false
