--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.servlet.context-path=/api-huex/v1
 
 spring.profiles.active=prov
 spring.jpa.open-in-view=true
+spring.jackson.time-zone=${TZ:America/Lima}
 
 # credentials
 spring.datasource.url=jdbc:postgresql://localhost:25432/dbhuex1
